# mlx-serving

./: .eslintrc.cjs  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  INSTALLATION_PROPOSAL.md  LICENSE  NOTICE  README.md  RELEASE_NOTES_v1.0.3.md  automatosx.config.json  models  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  tsup.config.ts  typedoc.json  vitest.config.ts
.automatosx/abilities/: mission-analysis.md  our-architecture-decisions.md
.automatosx/agents/: aerospace-scientist.yaml  architecture.yaml  backend.yaml  ceo.yaml  creative-marketer.yaml  cto.yaml  data-scientist.yaml  data.yaml  design.yaml  devops.yaml  frontend.yaml  fullstack.yaml  mobile.yaml  product.yaml  quality.yaml  quantum-engineer.yaml  researcher.yaml  security.yaml  standard.yaml  writer.yaml
.github/workflows/: ci.yml
.kr-mlx-cache/: index.json
.specify/: plan.md  spec.md  tasks.md
automatosx/PRD/: ACTION-PLAN-FINAL.md  CODEBASE_COMPARISON.md  DISTRIBUTED-INFERENCE-ACTION-PLAN.md  DISTRIBUTED-INFERENCE-PRD.md  DOCUMENTATION-MODERNIZATION-ACTION-PLAN.md  DOCUMENTATION-MODERNIZATION-PRD.md  FUTURE_PLANS.md  IMPLEMENTATION-PLAN.md  MLX_ENGINE_REFACTOR_STRATEGY.md  NATIVE_MODULE_ANALYSIS.md  PERFORMANCE-OPTIMIZATION-OVERVIEW.md  PHASE1_COMPLETION_REPORT.md  PHASE1_WEEK2_IMPLEMENTATION_REPORT.md  PHASE1_WEEK3_IMPLEMENTATION_REPORT.md  PHASE1_WEEK3_PLAN.md  PHASE1_WEEK4_PLAN.md  PHASE1_WEEK4_SUMMARY.md  PHASE2-IMPLEMENTATION-GUIDE.md  PHASE3-IMPLEMENTATION-GUIDE.md  PHASE4-IMPLEMENTATION-GUIDE.md  PHASE4-MEGA-PLAN.md  PHASE4-SCOPE-DEFINITION.md  PHASE_0_1_AUDIT_REPORT.md  PHASE_0_COMPLETION_REPORT.md  PHASE_0_FINAL_STATUS.md  PRD-FINAL.md  README.md  (+2 more)
benchmarks/: .gitignore  100-questions-comparison.ts  200-questions-apple-to-apple.ts  200-questions-comparison.ts  50-questions-apple-to-apple.ts  50-questions-comparison.ts  500-questions-apple-to-apple.ts  500-questions-comparison.ts  FLEXIBLE-BENCHMARK-README.md  README.md  apple-to-apple-comparison.ts  batching-performance.ts  compare-engines-fair.ts  compare-results.ts  compare-vision-fair.ts  compare-vision-fair.yaml  comparison.ts  comprehensive-2-models.ts  comprehensive-benchmark-v1.1.1-large-only.yaml  comprehensive-benchmark-v1.1.1-small-first.yaml  comprehensive-benchmark-v1.1.1.yaml  comprehensive-benchmark.ts  comprehensive-comparison.ts  continuous-vs-static-batching.ts  create-test-images.py  flexible-benchmark.ts  index.ts  ipc-overhead.ts  mlx-engine-server.py  mlx-engine-vision-server.py  mlx-vlm-server.py  model-caching.ts  native-buffer-pool-bench.ts  parallel-benchmark-wrapper.ts  perf-validation-bug-fixes.ts  phase2-engine-full.ts  phase2-engine-test.ts  phase2-quick-bench.ts  phase2-simple-bench.ts  profile-python-runtime.ts  (+14 more)
config/: README.md  cluster.yaml  feature-flags.yaml  model_profiles.yaml  runtime.yaml
docs/: AB_TESTING_GUIDE.md  AB_TESTING_QUICK_REFERENCE.md  ARCHITECTURE.md  BLIT_QUEUE.md  COMMAND_BUFFER_RING.md  DEPLOYMENT.md  ERROR_HANDLING.md  FEATURE_FLAGS.md  GUIDES.md  INDEX.md  LOCAL_DEV_SETUP.md  METAL_MEMORY_POOL.md  METAL_OPTIMIZATIONS.md  MIGRATION_V1.2.md  MODEL_DOWNLOADER.md  PERFORMANCE.md  PHASE5_PERFORMANCE_GUIDE.md  PRODUCTION_FEATURES.md  QUICK_START.md  STREAM_OPTIMIZATION.md  TESTING.md  TROUBLESHOOTING.md  TUTORIAL.md  ZOD_SCHEMAS.md  architecture-diagram.md
examples/: README.md  ab-test-example.ts  benchmark-gemma-27b.sh
native/: CMakeLists.txt
native/benchmarks/: CMakeLists.txt
native/bindings/: blit_queue_bindings.cpp  command_buffer_ring_bindings.cpp  command_ring_bindings.cpp  metal_pool_bindings.cpp  parallel_tokenizer_bindings.cpp  python_bindings.cpp  weight_manager_bindings.mm
native/include/: kr_blit_queue.h  kr_command_buffer_pool.h  kr_command_buffer_ring.h  kr_metal_memory_pool.h  kr_metrics_collector.h  kr_parallel_tokenizer.h  kr_weight_manager.h
native/src/: command_buffer_pool.mm  kr_blit_queue.mm  kr_command_buffer_ring.mm  kr_metal_memory_pool.mm  kr_parallel_tokenizer.cpp  kr_parallel_tokenizer.cpp.bak  kr_parallel_tokenizer.cpp.bak2  kr_weight_manager.mm  metrics_collector.cpp  utils.cpp
native/tests/: CMakeLists.txt
python/: benchmark_utils.py  config_loader.py  errors.py  gpu_scheduler.py  kv_cache_pool.py  model_downloader.py  model_registry.py  object_pool.py  requirements.txt  runtime.py  telemetry.py  validators.py
results/: fair-comparison-1762919922063.json  fair-comparison-1762922719722.json  fair-comparison-1762924814231.json  fair-comparison-1762933207476.json  fair-comparison-1762985524867.json  fair-comparison-1762985556988.json  fair-comparison-1762985581091.json  fair-comparison-1762985627451.json  fair-comparison-1762985687688.json  fair-comparison-1762985798294.json  fair-comparison-1762985917205.json  fair-comparison-1762988144035.json  fair-comparison-1762988176032.json  fair-comparison-1762988199940.json  fair-comparison-1762988246014.json  fair-comparison-1762988296251.json  fair-comparison-1762988403457.json  fair-comparison-1762988500801.json  fair-comparison-1762988703254.json  fair-comparison-1762989124822.json  fair-comparison-1762989360462.json  m3max-qwen3-30b-comparison.json  phase2-benchmark-1763085839534.json  phase2-benchmark-1763085916759.json  phase2-engine-nomsgpack-1763089533440.json  phase2-simple-1763088068946.json  qwen3-30b-final-comparison.json  stdout-fix-validation.json  v0.11.0-release-comparison.json  vision-fair-comparison-1762927859222.json  vision-fair-comparison-1762928342824.json  vision-fair-comparison-1762928572036.json  vision-fair-comparison-1762929960690.json  vision-fair-comparison-1762973999454.json  vision-fair-comparison-1762974541314.json  vision-fair-comparison-1762975828782.json  vision-fair-comparison-1762992545236.json
scripts/: build-native.sh  deploy-canary.sh  fix-eslint-batch.sh  hardware-check.ts  monitor-canary.sh  postinstall.cjs  prepare-env.ts  profile-system.sh  rollback-canary.sh  setup-mlx-engine-benchmark.sh  setup-mlx-engine.sh  start-controller.ts  start-worker.ts
src/: index.ts
tests/: conftest.py
(+557 files in other folders)
